--- a/resources/cv/LIWEI_YEH_CV.tex
+++ b/resources/cv/LIWEI_YEH_CV.tex
@@ -62,7 +62,7 @@
 }
 
 \newcommand{\resumeSubheading}[4]{
-	\vspace{7pt}\item
+	\vspace{4pt}\item
 	\begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
 		\textbf{#1} & #2 \\
 		\textit{\small#3} & \textit{\small #4} \\
@@ -77,7 +77,7 @@
 }
 
 \newcommand{\resumeProjectHeading}[2]{
-	\vspace{7pt}\item
+	\vspace{4pt}\item
 	\begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
 		\small#1 & #2 \\
 	\end{tabular*}\vspace{-7pt}
@@ -102,7 +102,7 @@
 	
 	
 	\begin{center}
-		\textbf{\Huge \scshape Li-Wei Yeh} \\ \vspace{1pt}
+		\textbf{\Huge \scshape Li-Wei (Levi) Yeh} \\ \vspace{1pt}
 		\small \href{mailto:liwei_yeh@hotmail.com}{\underline{liwei\_yeh@hotmail.com}} $|$ 
 		\href{https://www.linkedin.com/in/li-wei-yeh/}{\underline{linkedin.com/in/li-wei-yeh}} $|$
 		\href{https://github.com/LiWeiYeh/}{\underline{github.com/liweiyeh}}
@@ -144,7 +144,7 @@
 	\resumeItemListStart
 	\resumeItem{Responsible for both front-end and back-end work}
 	\resumeItem{Addressed bugs and possible improvements in existing applications using \\Kanban boards to prioritize requirements}
-	\resumeItem{Part of the scrum team, having regular daily standups and sprint reviews}
+	\resumeItem{Part of the scrum team, having daily standups and sprint reviews}
 	\resumeItemListEnd
 	
 	\resumeSubheading
@@ -156,7 +156,7 @@
 	\resumeItemListEnd
 	
 	\resumeSubheading
-	{Software Engineering Intern}{September 2020 -- January 2021}
+	{Software Engineering Intern}{September 2018 -- January 2019}
 	{Methylium B.V.}{The Hague, The Netherlands}
 	\resumeItemListStart
 	\resumeItem{Visualizing data in front-end development}
@@ -200,11 +200,10 @@
 	\resumeItemListEnd
 	
 	\resumeProjectHeading
-	{\textbf{Super Resolution} $|$ \emph{Python, Tensorflow/Keras, OpenCV}}{March 2021 -- August 2021}
+	{\textbf{Super Resolution} $|$ \emph{Python, Tensorflow/Keras, OpenCV}}{March 2021 -- July 2021}
 	\resumeItemListStart
 	\resumeItem{Created a neural network that aims to increase image resolution, \\whilst preserving image quality }
-	\resumeItem{Used the SRCNN model as a guideline}
-	\resumeItem{Scores better on evaluation metrics compared to the SRCNN model}
+	\resumeItem{Scores better on evaluation metrics compared to the baseline model}
 	\resumeItemListEnd
 	
 	\resumeSubHeadingListEnd
@@ -215,12 +214,17 @@
 	\section{Technical Skills}
 	\begin{itemize}[leftmargin=0.15in, label={}]
 		\small{\item{
-				\textbf{Languages}{: C\#, TypeScript, Python, \LaTeX} \\
+				\textbf{Programming Languages}{: C\#, TypeScript, Python, \LaTeX} \\
 				\textbf{Frameworks}{: Angular, .NET} \\
 				\textbf{Developer Tools}{: Git, Azure DevOps} \\
 		}}
 	\end{itemize}
 	
-	
+	\section{Other Skills}
+	\begin{itemize}[leftmargin=0.15in, label={}]
+		\small{\item{
+				\textbf{Languages}{: English, Dutch} \\
+		}}
+	\end{itemize}
 	%-------------------------------------------
 \end{document}
