updated resume, added master education

--- a/resources/cv/LIWEI_YEH_CV.tex
+++ b/resources/cv/LIWEI_YEH_CV.tex
@@ -99,8 +99,6 @@
 \begin{document}
 	
 	%----------HEADING----------
-	
-	
 	\begin{center}
 		\textbf{\Huge \scshape Li-Wei (Levi) Yeh} \\ \vspace{1pt}
 		\small \href{mailto:liwei_yeh@hotmail.com}{\underline{liwei\_yeh@hotmail.com}} $|$ 
@@ -108,19 +106,22 @@
 		\href{https://github.com/LiWeiYeh/}{\underline{github.com/liweiyeh}}
 	\end{center}
 	
-	
+
+
 	%-----------EDUCATION-----------
 	\section{Education}
 	\resumeSubHeadingListStart
 	\resumeSubheading
 	{Utrecht University}{Utrecht, The Netherlands}
-	{Pre-Master in Computer Science}{September 2021 -- Expected February 2022}
-%	\resumeItemListStart
-%	\resumeItem{WAM/GPA: X}
-%	\resumeItem{Award/Achievement/Involvement 1}
-%	\resumeItem{Award/Achievement/Involvement 2}
-%	\resumeItem{Award/Achievement/Involvement 3}
-%	\resumeItemListEnd
+	{Master of Science in Computer Science}{February 2022 -- Expected February 2024}
+	\resumeItemListStart
+	\resumeItem{Algorithm Design and Analysis Track}
+	\resumeItemListEnd
+	
+	\resumeSubheading
+	{Utrecht University}{Utrecht, The Netherlands}
+	{Pre-Master in Computer Science}{September 2021 -- February 2022}
+
 	
 	\resumeSubheading
 	{Rotterdam University of Applied Sciences}{Rotterdam, The Netherlands}
@@ -133,6 +134,8 @@
 	{National Taipei University of Technology}{Taipei, Taiwan}
 	{Fall Exchange Program}{September 2019 -- January 2020}
 	\resumeSubHeadingListEnd
+	
+	
 	
 	%-----------EXPERIENCE-----------
 	\section{Experience}
@@ -165,6 +168,8 @@
 
 	\resumeSubHeadingListEnd
 	
+	
+	
 	%-----------COMMUNITY AND LEADERSHIP-----------
 %	\section{Community \& Leadership}
 %	\resumeSubHeadingListStart
@@ -189,6 +194,8 @@
 %	
 %	\resumeSubHeadingListEnd
 	
+	
+	
 	%-----------PROJECTS-----------
 	\section{Projects}
 	\resumeSubHeadingListStart
@@ -196,7 +203,7 @@
 	\resumeProjectHeading
 	{\textbf{\href{https://liweiyeh.github.io/}{liweiyeh.github.io}} $|$ \emph{HTML, SCSS, Bootstrap}}{January 2019 -- Present}
 	\resumeItemListStart
-	\resumeItem{Personal single-page website created as a resume in the form of a \\ web application}
+	\resumeItem{Personal single-page website created as a resume}
 	\resumeItemListEnd
 	
 	\resumeProjectHeading
@@ -209,7 +216,7 @@
 	\resumeSubHeadingListEnd
 	
 	
-	%
+	
 	%-----------TECHNICAL SKILLS-----------
 	\section{Technical Skills}
 	\begin{itemize}[leftmargin=0.15in, label={}]
@@ -220,6 +227,9 @@
 		}}
 	\end{itemize}
 	
+	
+	
+	%-----------OTHER SKILLS-----------
 	\section{Other Skills}
 	\begin{itemize}[leftmargin=0.15in, label={}]
 		\small{\item{
