--- a/resources/cv/LIWEI_YEH_CV.tex
+++ b/resources/cv/LIWEI_YEH_CV.tex
@@ -61,10 +61,25 @@
 	}
 }
 
-\newcommand{\resumeSubheading}[4]{
+\newcommand{\resumeSubheadingEducation}[4]{
+	\vspace{4pt}\item
+	\begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
+		\textbf{#1}\\
+		\textit{\small#3} & \textit{\small #4} \\
+	\end{tabular*}\vspace{-7pt}
+}
+
+\newcommand{\resumeSubheadingExperience}[4]{
 	\vspace{4pt}\item
 	\begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
 		\textbf{#1} & #2 \\
+		\textit{\small#3} & \textit{\small #4} \\
+	\end{tabular*}\vspace{-7pt}
+}
+
+\newcommand{\resumeSubheadingg}[4]{
+	\vspace{-4pt}\item
+	\begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
 		\textit{\small#3} & \textit{\small #4} \\
 	\end{tabular*}\vspace{-7pt}
 }
@@ -105,70 +120,75 @@
 		\href{https://www.linkedin.com/in/li-wei-yeh/}{\underline{linkedin.com/in/li-wei-yeh}} $|$
 		\href{https://github.com/LiWeiYeh/}{\underline{github.com/liweiyeh}}
 	\end{center}
-	
 
-
-	%-----------EDUCATION-----------
-	\section{Education}
-	\resumeSubHeadingListStart
-	\resumeSubheading
-	{Utrecht University}{Utrecht, The Netherlands}
-	{Master of Science in Computer Science}{February 2022 -- Expected February 2024}
-	\resumeItemListStart
-	\resumeItem{Algorithm Design and Analysis Track}
-	\resumeItemListEnd
-	
-	\resumeSubheading
-	{Utrecht University}{Utrecht, The Netherlands}
-	{Pre-Master in Computer Science}{September 2021 -- February 2022}
-
-	
-	\resumeSubheading
-	{Rotterdam University of Applied Sciences}{Rotterdam, The Netherlands}
-	{Bachelor of Science in Computer Science}{September 2016 -- September 2021}
-	\resumeItemListStart
-	\resumeItem{Minored in Artificial Intelligence}
-	\resumeItemListEnd
-	
-	\resumeSubheading
-	{National Taipei University of Technology}{Taipei, Taiwan}
-	{Fall Exchange Program}{September 2019 -- January 2020}
-	\resumeSubHeadingListEnd
-	
 	
 	
 	%-----------EXPERIENCE-----------
 	\section{Experience}
 	\resumeSubHeadingListStart
 	
-	\resumeSubheading
-	{Part-Time Developer}{July 2021 – Present}
+	\resumeSubheadingExperience
+	{Junior Technical Consultant}{September 2022 – Present}
+	{Ordina}{Nieuwegein, The Netherlands}
+%	\resumeItemListStart
+%	\resumeItem{Responsible for both front-end and back-end work}
+%	\resumeItem{Addressed bugs and possible improvements in existing applications using \\Kanban boards to prioritize requirements}
+%	\resumeItem{Part of the scrum team, having daily standups and sprint reviews}
+%	\resumeItemListEnd
+	
+	\resumeSubheadingExperience
+	{Part-Time Developer}{July 2021 – September 2022}
 	{Methylium B.V.}{The Hague, The Netherlands}
 	\resumeItemListStart
 	\resumeItem{Responsible for both front-end and back-end work}
 	\resumeItem{Addressed bugs and possible improvements in existing applications using \\Kanban boards to prioritize requirements}
-	\resumeItem{Part of the scrum team, having daily standups and sprint reviews}
 	\resumeItemListEnd
 	
-	\resumeSubheading
+	\resumeSubheadingExperience
 	{Software Engineering Intern}{September 2020 -- January 2021}
 	{ilionx}{Utrecht, The Netherlands}
 	\resumeItemListStart
-	\resumeItem{Created a recommender system in the form of an API}
-	\resumeItem{Used Kanban to prioritize requirements and communicate progress}
+	\resumeItem{Created a recommender system in the form of an API in .NET}
 	\resumeItemListEnd
 	
-	\resumeSubheading
+	\resumeSubheadingExperience
 	{Software Engineering Intern}{September 2018 -- January 2019}
 	{Methylium B.V.}{The Hague, The Netherlands}
 	\resumeItemListStart
 	\resumeItem{Visualizing data in front-end development}
-	\resumeItem{Part of the scrum team}
 	\resumeItemListEnd
 
 	\resumeSubHeadingListEnd
 	
 	
+	
+	%-----------EDUCATION-----------
+	\section{Education}
+	\resumeSubHeadingListStart
+	\resumeSubheadingEducation
+	{Utrecht University}{The Netherlands}
+	{Master of Science in Computer Science}{February 2022 -- Expected February 2025}
+	\resumeItemListStart
+	\resumeItem{Algorithm Design and Analysis Track}
+	\resumeItemListEnd
+	
+	\resumeSubheadingg
+	{}{}
+	{Pre-Master in Computer Science}{September 2021 -- February 2022}
+	
+	\resumeSubheadingEducation
+	{Rotterdam University of Applied Sciences}{The Netherlands}
+	{Bachelor of Science in Computer Science}{September 2016 -- September 2021}
+	\resumeItemListStart
+	\resumeItem{Minored in Artificial Intelligence}
+	\resumeItemListEnd
+	
+	\resumeSubheadingEducation
+	{National Taipei University of Technology}{Taiwan}
+	{Fall Exchange Program}{September 2019 -- January 2020}
+	\resumeSubHeadingListEnd
+
+
 	
 	%-----------COMMUNITY AND LEADERSHIP-----------
 %	\section{Community \& Leadership}
@@ -210,7 +230,6 @@
 	{\textbf{Super Resolution} $|$ \emph{Python, Tensorflow/Keras, OpenCV}}{March 2021 -- July 2021}
 	\resumeItemListStart
 	\resumeItem{Created a neural network that aims to increase image resolution, \\whilst preserving image quality }
-	\resumeItem{Scores better on evaluation metrics compared to the baseline model}
 	\resumeItemListEnd
 	
 	\resumeSubHeadingListEnd
@@ -221,7 +240,7 @@
 	\section{Technical Skills}
 	\begin{itemize}[leftmargin=0.15in, label={}]
 		\small{\item{
-				\textbf{Programming Languages}{: C\#, TypeScript, Python, \LaTeX} \\
+				\textbf{Programming Languages}{: C\#, TypeScript, Python} \\
 				\textbf{Frameworks}{: Angular, .NET} \\
 				\textbf{Developer Tools}{: Git, Azure DevOps} \\
 		}}
