--- a/resources/cv/LIWEI_YEH_CV.tex
+++ b/resources/cv/LIWEI_YEH_CV.tex
@@ -113,31 +113,36 @@
 	\resumeSubHeadingListStart
 	
 	\resumeSubheading
-	{Software Engineer Consultant}{Septermber 2022 - Present}
+	{Software Engineer Consultant}{September 2022 - Present}
 	{Ordina}{Nieuwegein, The Netherlands}
+	\resumeItemListStart
+	\resumeItem{Lead the development of software systems}\\
+	\resumeItem{Contribute to the continuous improvement of the development process}\\
+	\resumeItem{Act as a technical point of contact for the team}\\
+	\resumeItemListEnd
 	
 	\resumeSubheading
 	{Developer}{July 2021 – August 2022}
 	{Methylium B.V.}{The Hague, The Netherlands}
 	\resumeItemListStart
-	\resumeItem{Full-stack developer, responsible for both front-end and back-end work}
-	\resumeItem{Implemented features using Angular, and .NET}
-	\resumeItem{Addressed bugs and possible improvements in existing applications \\ using Kanban boards}
+	\resumeItem{Continuously improve the application by fixing bugs and adding new\\ 
+		features using Angular, and .NET}
+	\resumeItem{Develop and maintain the front-end and back-end of the application}
 	\resumeItemListEnd
 	
 	\resumeSubheading
 	{Software Engineer Intern}{September 2020 -- January 2021}
 	{ilionx}{Utrecht, The Netherlands}
 	\resumeItemListStart
-	\resumeItem{Created a recommender system in the form of a .NET API}
-	\resumeItem{Applied machine learning techniques to the recommender system}
+	\resumeItem{Design and implement a recommender system using machine learning\\
+		algorithms in the form of a .NET API}
 	\resumeItemListEnd
 	
 	\resumeSubheading
 	{Software Engineer Intern}{September 2018 -- January 2019}
 	{Methylium B.V.}{The Hague, The Netherlands}
 	\resumeItemListStart
-	\resumeItem{Visualizing data in front-end development using Angular}
+	\resumeItem{Visualize data in front-end development using Angular}
 	\resumeItemListEnd
 	
 	\resumeSubHeadingListEnd
@@ -157,7 +162,7 @@
 	\resumeProjectHeading
 	{\textbf{Super Resolution} $|$ \emph{Python, Tensorflow/Keras, OpenCV}}{March 2021 -- July 2021}
 	\resumeItemListStart
-	\resumeItem{Created a neural network that aims to increase image resolution, \\whilst preserving image quality }
+	\resumeItem{Create a neural network that aims to increase image resolution, \\whilst preserving image quality}
 	\resumeItemListEnd
 	
 	\resumeSubHeadingListEnd
@@ -169,7 +174,7 @@
 	\resumeSubHeadingListStart
 	\resumeSubheading
 	{Utrecht University}{Utrecht, The Netherlands}
-	{Master of Science in Computer Science}{February 2022 -- Expected September 2025}
+	{Master of Science in Computer Science}{February 2022 -- Expected September 2024}
 	\resumeItemListStart
 	\resumeItem{Algorithm Design and Analysis Track}
 	\resumeItemListEnd
@@ -194,7 +199,7 @@
 		\small{\item{
 				\textbf{Programming Languages}{: C\#, TypeScript, Python, SQL} \\
 				\textbf{Tools \& Frameworks}{: Angular, .NET, Git, Azure, SQLServer, HTML/CSS} \\ 
-				\textbf{Others}{: Scrum, Agile, Kanban, DevOps, Full-stack development, OOP, MVC} \\
+				\textbf{Others}{: Scrum, Agile, Kanban, DevOps, Full-stack development, OOP, MVC, CI/CD} \\
 				\textbf{Languages}{: English, Dutch} \\
 		}}
 	\end{itemize}
