--- a/resources/cv/LIWEI_YEH_CV.tex
+++ b/resources/cv/LIWEI_YEH_CV.tex
@@ -116,8 +116,8 @@
 	{Software Engineer Consultant}{September 2022 - Present}
 	{Ordina}{Nieuwegein, The Netherlands}
 	\resumeItemListStart
-	\resumeItem{Lead the development of software systems}\\
-	\resumeItem{Contribute to the continuous improvement of the development process}\\
+	\resumeItem{Lead the development in a team of Young Professionals/new hires}\\
+	\resumeItem{Contribute to the continuous improvement of an Angular application}\\
 	\resumeItem{Act as a technical point of contact for the team}\\
 	\resumeItemListEnd
 	
@@ -149,7 +149,7 @@
 	
 	
 	
-		%-----------PROJECTS-----------
+	%-----------PROJECTS-----------
 	\section{Projects}
 	\resumeSubHeadingListStart
 	
@@ -172,6 +172,7 @@
 	%-----------EDUCATION-----------
 	\section{Education}
 	\resumeSubHeadingListStart
+	
 	\resumeSubheading
 	{Utrecht University}{Utrecht, The Netherlands}
 	{Master of Science in Computer Science}{February 2022 -- Expected September 2024}
@@ -189,6 +190,21 @@
 	\resumeSubheading
 	{National Taipei University of Technology}{Taipei, Taiwan}
 	{Fall Exchange Program}{September 2019 -- January 2020}
+	
+	\resumeSubHeadingListEnd
+	
+	
+	
+	%-----------PROJECTS-----------
+	\section{Certificates}
+	\resumeSubHeadingListStart
+	
+	\resumeProjectHeading
+	{\textbf{AZ-900: Microsoft Azure Fundamentals} $|$ \emph{Microsoft Azure}}{September 2022}
+	
+	\resumeProjectHeading
+	{\textbf{Professional Scrum Master I} $|$ \emph{Scrum.org}}{February 2023}
+	
 	\resumeSubHeadingListEnd
 	
 	
@@ -199,7 +215,7 @@
 		\small{\item{
 				\textbf{Programming Languages}{: C\#, TypeScript, Python, SQL} \\
 				\textbf{Tools \& Frameworks}{: Angular, .NET, Git, Azure, SQLServer, HTML/CSS} \\ 
-				\textbf{Others}{: Scrum, Agile, Kanban, DevOps, Full-stack development, OOP, MVC, CI/CD} \\
+				\textbf{Others}{: Scrum, Agile, Kanban, DevOps, Full-stack development, OOP, FP, MVC, CI/CD} \\
 				\textbf{Languages}{: English, Dutch} \\
 		}}
 	\end{itemize}
