update cv: change work experience bullet points

--- a/resources/cv/LIWEI_YEH_CV.tex
+++ b/resources/cv/LIWEI_YEH_CV.tex
@@ -113,11 +113,12 @@
 	\resumeSubHeadingListStart
 	
 	\resumeSubheading
-	{Software Engineer Consultant}{September 2022 - Present}
+	{Software Engineer}{September 2022 - Present}
 	{Ordina}{Nieuwegein, The Netherlands}
 	\resumeItemListStart
-	\resumeItem{Lead the development in a team of Young Professionals/new hires}\\
-	\resumeItem{Contribute to the continuous improvement of an Angular application}\\
+	\resumeItem{Lead meetings in a Scrum team}\\
+	\resumeItem{Created new features to continuously develop applications}\\
+	\resumeItem{Addressed bugs and possible improvements}\\
 	\resumeItem{Act as a technical point of contact for the team}\\
 	\resumeItemListEnd
 	
@@ -135,7 +136,7 @@
 	{ilionx}{Utrecht, The Netherlands}
 	\resumeItemListStart
 	\resumeItem{Design and implement a recommender system using machine learning\\
-		algorithms in the form of a .NET API}
+		algorithms, in the form of a .NET API}
 	\resumeItemListEnd
 	
 	\resumeSubheading
