update cv: typo kinda

--- a/resources/cv/LIWEI_YEH_CV.tex
+++ b/resources/cv/LIWEI_YEH_CV.tex
@@ -116,7 +116,7 @@
 	{Software Engineer}{September 2022 - Present}
 	{Ordina}{Nieuwegein, The Netherlands}
 	\resumeItemListStart
-	\resumeItem{Lead meetings in a Scrum team}\\
+	\resumeItem{Lead meetings within a Scrum team}\\
 	\resumeItem{Created new features to continuously develop applications}\\
 	\resumeItem{Addressed bugs and possible improvements}\\
 	\resumeItem{Act as a technical point of contact for the team}\\
