--- a/resources/cv/LIWEI_YEH_CV.tex
+++ b/resources/cv/LIWEI_YEH_CV.tex
@@ -112,22 +112,30 @@
 	\section{Experience}
 	\resumeSubHeadingListStart
 	
+   	\resumeSubheading
+    {Software Developer}{October 2024 - Present}
+    {ilionx B.V.}{Utrecht, The Netherlands}
+%    \resumeItemListStart
+%    \resumeItem{Implement features }\\
+%    \resumeItem{Actively engaged with the product owner to maintain quality}\\
+%    \resumeItem{Work in a high-pressure environment due to strict deadlines}\\
+%    \resumeItem{Worked on projects for large companies such as ProRail, \\Port of Amsterdam, Open Universiteit}
+%    \resumeItemListEnd
+    
 	\resumeSubheading
-	{Software Engineer}{September 2022 - Present}
+	{Software Engineer}{September 2022 - Septermber 2024}
 	{Ordina}{Nieuwegein, The Netherlands}
 	\resumeItemListStart
-	\resumeItem{Lead meetings within a Scrum team}\\
-	\resumeItem{Created new features to continuously develop applications}\\
-	\resumeItem{Addressed bugs and possible improvements}\\
-	\resumeItem{Act as a technical point of contact for the team}\\
+    \resumeItem{Implement features in a Clean Architecture project}\\
+    \resumeItem{Developed robust unit tests using Test Driven Development}
+	\resumeItem{Actively engaged with the product owner to maintain quality}\\
+   	\resumeItem{Work in a high-pressure environment due to strict deadlines}\\
 	\resumeItemListEnd
 	
 	\resumeSubheading
 	{Developer}{July 2021 – August 2022}
 	{Methylium B.V.}{The Hague, The Netherlands}
 	\resumeItemListStart
-	\resumeItem{Continuously improve the application by fixing bugs and adding new\\ 
-		features using Angular, and .NET}
 	\resumeItem{Develop and maintain the front-end and back-end of the application}
 	\resumeItemListEnd
 	
@@ -135,38 +143,37 @@
 	{Software Engineer Intern}{September 2020 -- January 2021}
 	{ilionx}{Utrecht, The Netherlands}
 	\resumeItemListStart
-	\resumeItem{Design and implement a recommender system using machine learning\\
-		algorithms, in the form of a .NET API}
+	\resumeItem{Design and implement a recommender system using machine learning}
 	\resumeItemListEnd
 	
 	\resumeSubheading
 	{Software Engineer Intern}{September 2018 -- January 2019}
 	{Methylium B.V.}{The Hague, The Netherlands}
 	\resumeItemListStart
-	\resumeItem{Visualize data in front-end development using Angular}
+	\resumeItem{Visualize data in front-end development}
 	\resumeItemListEnd
 	
 	\resumeSubHeadingListEnd
 	
 	
 	
-	%-----------PROJECTS-----------
-	\section{Projects}
-	\resumeSubHeadingListStart
-	
-	\resumeProjectHeading
-	{\textbf{\href{https://liweiyeh.github.io/}{liweiyeh.github.io}} $|$ \emph{HTML, SCSS, Bootstrap}}{January 2019 -- Present}
-	\resumeItemListStart
-	\resumeItem{Personal single-page website created as a resume}
-	\resumeItemListEnd
-	
-	\resumeProjectHeading
-	{\textbf{Super Resolution} $|$ \emph{Python, Tensorflow/Keras, OpenCV}}{March 2021 -- July 2021}
-	\resumeItemListStart
-	\resumeItem{Create a neural network that aims to increase image resolution, \\whilst preserving image quality}
-	\resumeItemListEnd
-	
-	\resumeSubHeadingListEnd
+%	%-----------PROJECTS-----------
+%	\section{Projects}
+%	\resumeSubHeadingListStart
+%	
+%%	\resumeProjectHeading
+%%	{\textbf{\href{https://liweiyeh.github.io/}{liweiyeh.github.io}} $|$ \emph{HTML, SCSS, Bootstrap}}{January 2019 -- Present}
+%%	\resumeItemListStart
+%%	\resumeItem{Personal single-page website created as a resume}
+%%	\resumeItemListEnd
+%	
+%	\resumeProjectHeading
+%	{\textbf{Super Resolution} $|$ \emph{Python, Tensorflow/Keras, OpenCV}}{March 2021 -- July 2021}
+%	\resumeItemListStart
+%	\resumeItem{Create a neural network that aims to increase image resolution, \\whilst preserving image quality}
+%	\resumeItemListEnd
+%	
+%	\resumeSubHeadingListEnd
 	
 	
 	
@@ -176,32 +183,35 @@
 	
 	\resumeSubheading
 	{Utrecht University}{Utrecht, The Netherlands}
-	{Master of Science in Computer Science}{February 2022 -- Expected September 2024}
+	{Master of Science in Computer Science}{February 2022 -- Expected July 2025}
 	\resumeItemListStart
 	\resumeItem{Algorithm Design and Analysis Track}
 	\resumeItemListEnd
 	
 	\resumeSubheading
 	{Rotterdam University of Applied Sciences}{Rotterdam, The Netherlands}
-	{Bachelor of Science in Computer Science}{September 2016 -- August 2021}
+	{Bachelor of Science in Computer Science}{September 2016 -- July 2021}
 	\resumeItemListStart
-	\resumeItem{Minored in Artificial Intelligence}
+%	\resumeItem{Minored in Artificial Intelligence}
+    \resumeItem{Fall Exchange Program at NTUT, Taiwan}
 	\resumeItemListEnd
-	
-	\resumeSubheading
-	{National Taipei University of Technology}{Taipei, Taiwan}
-	{Fall Exchange Program}{September 2019 -- January 2020}
 	
 	\resumeSubHeadingListEnd
 	
 	
 	
-	%-----------PROJECTS-----------
+	%-----------Certificates-----------
 	\section{Certificates}
 	\resumeSubHeadingListStart
 	
+   	\resumeProjectHeading
+    {\textbf{AZ-400: DevOps Engineer Expert} $|$ \emph{Microsoft Azure}}{November 2024}
+    
+   	\resumeProjectHeading
+    {\textbf{AZ-204: Azure Developer Associate} $|$ \emph{Microsoft Azure}}{September 2024}
+    
 	\resumeProjectHeading
-	{\textbf{AZ-900: Microsoft Azure Fundamentals} $|$ \emph{Microsoft Azure}}{September 2022}
+	{\textbf{AZ-900: Azure Fundamentals} $|$ \emph{Microsoft Azure}}{September 2022}
 	
 	\resumeProjectHeading
 	{\textbf{Professional Scrum Master I} $|$ \emph{Scrum.org}}{February 2023}
@@ -214,9 +224,9 @@
 	\section{Skills}
 	\begin{itemize}[leftmargin=0.15in, label={}]
 		\small{\item{
-				\textbf{Programming Languages}{: C\#, TypeScript, Python, SQL} \\
+				\textbf{Programming Languages}{: C\#, TypeScript, SQL} \\
 				\textbf{Tools \& Frameworks}{: Angular, .NET, Git, Azure, SQLServer, HTML/CSS} \\ 
-				\textbf{Others}{: Scrum, Agile, Kanban, DevOps, Full-stack development, OOP, FP, MVC, CI/CD} \\
+				\textbf{Others}{: Scrum, Agile, Kanban, DevOps, Full-stack, CI/CD, Unit Testing, TDD, OOP, FP, MVC, Clean Architecture} \\
 				\textbf{Languages}{: English, Dutch} \\
 		}}
 	\end{itemize}
