--- a/resources/cv/LIWEI_YEH_CV.tex
+++ b/resources/cv/LIWEI_YEH_CV.tex
@@ -114,22 +114,18 @@
 	
    	\resumeSubheading
     {Software Developer}{October 2024 - Present}
-    {ilionx B.V.}{Utrecht, The Netherlands}
-%    \resumeItemListStart
-%    \resumeItem{Implement features }\\
-%    \resumeItem{Actively engaged with the product owner to maintain quality}\\
-%    \resumeItem{Work in a high-pressure environment due to strict deadlines}\\
-%    \resumeItem{Worked on projects for large companies such as ProRail, \\Port of Amsterdam, Open Universiteit}
-%    \resumeItemListEnd
+    {ilionx}{Utrecht, The Netherlands}
+    \resumeItemListStart
+    \resumeItem{Design interfaces using a bottom-up approach}
+    \resumeItemListEnd
     
 	\resumeSubheading
 	{Software Engineer}{September 2022 - Septermber 2024}
 	{Ordina}{Nieuwegein, The Netherlands}
 	\resumeItemListStart
-    \resumeItem{Implement features in a Clean Architecture project}\\
-    \resumeItem{Developed robust unit tests using Test Driven Development}
-	\resumeItem{Actively engaged with the product owner to maintain quality}\\
-   	\resumeItem{Work in a high-pressure environment due to strict deadlines}\\
+    \resumeItem{Implement features in a Clean Architecture project}
+    \resumeItem{Develop robust unit tests using Test Driven Development}
+   	\resumeItem{Work in a high-pressure environment due to strict deadlines}
 	\resumeItemListEnd
 	
 	\resumeSubheading
