--- a/resources/cv/LIWEI_YEH_CV.tex
+++ b/resources/cv/LIWEI_YEH_CV.tex
@@ -120,7 +120,7 @@
     \resumeItemListEnd
     
 	\resumeSubheading
-	{Software Engineer}{September 2022 - Septermber 2024}
+	{Software Engineer}{September 2022 - September 2024}
 	{Ordina}{Nieuwegein, The Netherlands}
 	\resumeItemListStart
     \resumeItem{Implement features in a Clean Architecture project}
@@ -220,7 +220,7 @@
 	\section{Skills}
 	\begin{itemize}[leftmargin=0.15in, label={}]
 		\small{\item{
-				\textbf{Programming Languages}{: C\#, TypeScript, SQL} \\
+				\textbf{Programming Languages}{: C\#, TypeScript, Java, SQL} \\
 				\textbf{Tools \& Frameworks}{: Angular, .NET, Git, Azure, SQLServer, HTML/CSS} \\ 
 				\textbf{Others}{: Scrum, Agile, Kanban, DevOps, Full-stack, CI/CD, Unit Testing, TDD, OOP, FP, MVC, Clean Architecture} \\
 				\textbf{Languages}{: English, Dutch} \\
